--- a/Sheet-v2/WCSS-Footer.css
+++ b/Sheet-v2/WCSS-Footer.css
@@ -12,6 +12,11 @@
     padding: 0px;
 }
 
+.wuxMinSize150
+{
+    min-width: 150px;
+}
+
 /*========================================
     Button
 ========================================*/
@@ -77,6 +82,13 @@ button[type=roll].wuxButton span,
     color: #1d1e1f;
     font-size: 12px;
     font-weight: normal;
+}
+
+button[type=roll].wuxButton span span,
+.wuxButton span span
+{
+    display: inline;
+    width: auto;
 }
 
 /*========================================
